--- a/src/Osu.Music.UI/Resources/Dictionaries/Defaults.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Defaults.xaml
@@ -138,23 +138,25 @@
     </Style>
 
     <Style TargetType="{x:Type ToolTip}">
-        <Setter Property="Placement" Value="Center"/>
-        <Setter Property="VerticalOffset" Value="{Binding Path=PlacementTarget.ActualHeight, RelativeSource={RelativeSource Mode=Self}}"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="Background">
+        <Setter Property="Placement" Value="Bottom"/>
+        <Setter Property="HorizontalOffset">
             <Setter.Value>
-                <SolidColorBrush Color="{DynamicResource ColorMainLight}" Opacity="1.0"/>
+                <MultiBinding Converter="{StaticResource WidthToHorizontalOffsetConverter}">
+                    <Binding RelativeSource="{RelativeSource Self}" Path="PlacementTarget.ActualWidth"/>
+                    <Binding RelativeSource="{RelativeSource Self}" Path="ActualWidth"/>
+                </MultiBinding>
             </Setter.Value>
         </Setter>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
+        <Setter Property="FontSize" Value="24"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToolTip}">
-                    <StackPanel Margin="10 20 10 10" HorizontalAlignment="Center">
-                        <StackPanel.Effect>
-                            <DropShadowEffect BlurRadius="5" ShadowDepth="0" Direction="0"/>
-                        </StackPanel.Effect>
-                        <Polygon Points="0,5 5,0, 10,5" Stroke="#333333" Fill="#333333" HorizontalAlignment="Center"/>
-                        <Border CornerRadius="5" Background="#333333" Padding="5">
+                    <StackPanel>
+                        <Polygon Points="0,5 5,0, 10,5" StrokeThickness="0" Stroke="Transparent" Fill="#B8000000" 
+                                 HorizontalAlignment="Center"/>
+                        <Border CornerRadius="3" Background="#B8000000" Padding="5 3 5 3">
                             <ContentPresenter/>
                         </Border>
                     </StackPanel>
