--- a/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Texts.xaml
@@ -72,6 +72,10 @@
         </Style.Triggers>
     </Style>
 
+    <Style x:Key="TooltipText" TargetType="{x:Type TextBlock}">
+        <Setter Property="FontSize" Value="12"/>
+    </Style>
+
     <Style x:Key="LicenseText" TargetType="{x:Type TextBlock}">
         <Setter Property="FontFamily" Value="Monospace"/>
         <Setter Property="FontSize" Value="14"/>
