--- a/src/Osu.Music.UI/Views/MainView.xaml
+++ b/src/Osu.Music.UI/Views/MainView.xaml
@@ -39,12 +39,12 @@
                 <Button Style="{StaticResource TitleBarUpdates}" Visibility="{Binding DataContext.Updater.State, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}, Converter={StaticResource UpdateStateToVisibilityConverter}, FallbackValue=Collapsed}"
                         Command="{Binding DataContext.UpdateAppCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}">
                     <Button.ToolTip>
-                        <TextBlock Text="Update osu.Music"/>
+                        <TextBlock Style="{DynamicResource TooltipText}" Text="Update osu.Music"/>
                     </Button.ToolTip>
                 </Button>
                 <Button Style="{StaticResource TitleBarSearch}" Command="{Binding OpenGitHubCommand}">
                     <Button.ToolTip>
-                        <TextBlock Text="Search"/>
+                        <TextBlock Style="{DynamicResource TooltipText}" Text="Search"/>
                     </Button.ToolTip>
                 </Button>
                 <Button Style="{StaticResource TitleBarMinimize}" Command="{Binding MinimizeCommand, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"/>
@@ -64,19 +64,19 @@
 
                 <Button Style="{DynamicResource SidebarButtonOsu}" Command="{Binding OpenPageCommand}" CommandParameter="AboutView">
                     <Button.ToolTip>
-                        <TextBlock Text="About"/>
+                        <TextBlock Style="{DynamicResource TooltipText}" Text="About"/>
                     </Button.ToolTip>
                 </Button>
                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                     <Button Style="{StaticResource GithubButton}" Command="{Binding OpenGitHubCommand}">
                         <Button.ToolTip>
-                            <TextBlock Text="Go to GitHub"/>
+                            <TextBlock Style="{DynamicResource TooltipText}" Text="Go to GitHub"/>
                         </Button.ToolTip>
                     </Button>
 
                     <Button Style="{DynamicResource SettingsButton}" Margin="3 0 0 0"  Command="{Binding OpenPageCommand}" CommandParameter="SettingsView">
                         <Button.ToolTip>
-                            <TextBlock Text="Settings"/>
+                            <TextBlock Style="{DynamicResource TooltipText}" Text="Settings"/>
                         </Button.ToolTip>
                     </Button>
                 </StackPanel>
