--- a/src/Osu.Music.UI/Views/Dialogs/GenericConfirmationView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/GenericConfirmationView.xaml
@@ -12,7 +12,7 @@
             <RowDefinition />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock FontSize="14" Text="{Binding Title}"/>
+        <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" Text="{Binding Title}"/>
         <TextBlock Grid.Row="1" Margin="0 6 0 0" FontSize="18" TextWrapping="WrapWithOverflow" Text="{Binding Message}"/>
         <StackPanel Grid.Row="2" Margin="0 16 0 0" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Command="{Binding AcceptCommand}" IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}" Content="{Binding Caption}"/>
