--- a/src/Osu.Music.UI/Resources/Dictionaries/Colors.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/Colors.xaml
@@ -7,7 +7,8 @@
     <Color x:Key="ColorTextDisabled">#61000000</Color>
     <Color x:Key="ColorTextMediumEmphasis">#99000000</Color>
     <Color x:Key="ColorTextHighEmphasis">#DE000000</Color>
-    
+
+    <SolidColorBrush x:Key="SolidColorBrushHover" Color="#10000000"/>
     <SolidColorBrush x:Key="SolidColorBrushMain" Color="{DynamicResource ColorMain}"/>
     <SolidColorBrush x:Key="SolidColorBrushMainLight" Color="{DynamicResource ColorMainLight}"/>
     <SolidColorBrush x:Key="SolidColorBrushMainDark" Color="{DynamicResource ColorMainDark}"/>
