--- a/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/DataTemplates.xaml
@@ -11,7 +11,7 @@
             <StackPanel>
                 <Grid>
                     <Grid>
-                        <Rectangle Width="145" Height="145" RadiusX="15" RadiusY="10" Fill="#20000000"/>
+                        <Rectangle Width="145" Height="145" RadiusX="10" RadiusY="10" Fill="#20000000"/>
                         <materialDesign:PackIcon HorizontalAlignment="Center" VerticalAlignment="Center" Width="80" Height="80" Margin="0 10 0 0" Foreground="#50000000" Kind="PlaylistNote"/>
                         <Grid Width="145" Height="145">
                             <Grid.Clip>
@@ -53,7 +53,7 @@
                         </StackPanel>
                     </Border>
                 </Grid>
-                <TextBlock Text="{Binding Path=Name}" FontFamily="{DynamicResource Poppins}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" Background="White" FontSize="12" FontWeight="DemiBold">
+                <TextBlock Text="{Binding Path=Name}" FontFamily="{DynamicResource Poppins}" Foreground="{DynamicResource SolidColorBrushTextHighEmphasis}" Background="White" FontSize="12" FontWeight="DemiBold" MaxWidth="145">
                     <TextBlock.Style>
                         <Style TargetType="{x:Type TextBlock}">
                             <Style.Triggers>
@@ -67,7 +67,7 @@
                         <LinearGradientBrush StartPoint="0.0,0.5" EndPoint="1.0,0.5">
                             <LinearGradientBrush.GradientStops>
                                 <GradientStop Offset="0" Color="Black"/>
-                                <GradientStop Offset="0.8" Color="Black"/>
+                                <GradientStop Offset="0.7" Color="Black"/>
                                 <GradientStop Offset="1" Color="Transparent"/>
                             </LinearGradientBrush.GradientStops>
                         </LinearGradientBrush>
