--- a/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
+++ b/src/Osu.Music.UI/Resources/Dictionaries/ListViews.xaml
@@ -1,23 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ListViewBeatmaps" TargetType="{x:Type ListView}">
-        <Style.Resources>
-            <Style x:Key="TitleStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontSize" Value="12"/>
-                <Setter Property="FontWeight" Value="Bold"/>
-                <Setter Property="Foreground" Value="White"/>
-                <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
-            </Style>
-
-            <Style x:Key="ArtistStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="FontSize" Value="12"/>
-                <Setter Property="FontWeight" Value="Regular"/>
-                <Setter Property="Foreground" Value="White"/>
-                <Setter Property="FontFamily" Value="{DynamicResource Poppins}"/>
-            </Style>
-
-            <SolidColorBrush x:Key="HoverBrush" Color="#10000000"/>
-        </Style.Resources>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Padding" Value="0"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
@@ -40,21 +23,21 @@
                                         <MultiTrigger.Conditions>
                                             <Condition Property="IsMouseOver" Value="True"/>
                                         </MultiTrigger.Conditions>
-                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource HoverBrush}"/>
+                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource SolidColorBrushHover}"/>
                                     </MultiTrigger>
                                     <MultiTrigger>
                                         <MultiTrigger.Conditions>
                                             <Condition Property="Selector.IsSelectionActive" Value="False"/>
                                             <Condition Property="IsSelected" Value="True"/>
                                         </MultiTrigger.Conditions>
-                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource HoverBrush}"/>
+                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource SolidColorBrushHover}"/>
                                     </MultiTrigger>
                                     <MultiTrigger>
                                         <MultiTrigger.Conditions>
                                             <Condition Property="Selector.IsSelectionActive" Value="True"/>
                                             <Condition Property="IsSelected" Value="True"/>
                                         </MultiTrigger.Conditions>
-                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource HoverBrush}"/>
+                                        <Setter Property="Background" TargetName="Bd" Value="{DynamicResource SolidColorBrushHover}"/>
                                     </MultiTrigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
