--- a/src/Osu.Music.UI/Views/Dialogs/NewPlaylistView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/NewPlaylistView.xaml
@@ -9,7 +9,7 @@
              xmlns:utility="clr-namespace:Osu.Music.UI.Utility"
              xmlns:proxy="clr-namespace:Osu.Music.UI.Utility.Proxies"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300" d:DesignWidth="350">
     <UserControl.Resources>
         <proxy:NewPlaylistViewModelProxy x:Key="proxy" Data="{Binding}"/>
     </UserControl.Resources>
@@ -19,8 +19,8 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock FontSize="14" Text="New playlist:"/>
-        <TextBox Grid.Row="1" Margin="0,6,0,0" wpf:HintAssist.Hint="Name" FontSize="18" MinWidth="300"
+        <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" Text="New playlist:"/>
+        <TextBox Grid.Row="1" Margin="0 6 0 0" wpf:HintAssist.Hint="Name" FontSize="18" MinWidth="300"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  utility:ValidationBehaviour.HasError="{Binding NameHasError}">
             <TextBox.Text>
