--- a/src/Osu.Music.UI/Views/Dialogs/AddToPlaylistView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/AddToPlaylistView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Osu.Music.UI.Views.Dialogs.SendToPlaylistView"
+﻿<UserControl x:Class="Osu.Music.UI.Views.Dialogs.AddToPlaylistView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -24,7 +24,7 @@
                     <Grid Name="ItemContainer">
                         <Grid.InputBindings>
                             <MouseBinding Gesture="LeftClick" 
-                                          Command="{Binding DataContext.SendCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SendToPlaylistView}}}"
+                                          Command="{Binding DataContext.SendCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AddToPlaylistView}}}"
                                           CommandParameter="{Binding .}">
                             </MouseBinding>
                         </Grid.InputBindings>
