Playlist dialog fixes

--- a/src/Osu.Music.UI/Views/Dialogs/AddToPlaylistView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/AddToPlaylistView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:m="clr-namespace:Osu.Music.Common.Models;assembly=Osu.Music.Common"
              xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:Osu.Music.UI.Views.Dialogs"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="350">
@@ -15,19 +16,21 @@
         </Grid.RowDefinitions>
         <Grid HorizontalAlignment="Stretch">
             <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" VerticalAlignment="Center" Text="Add to..."/>
-            <Button HorizontalAlignment="Right" Style="{DynamicResource DialogCloseButton}"
+            <Button HorizontalAlignment="Right" Style="{DynamicResource DialogCloseButton}" IsCancel="True"
                     Command="{Binding CancelCommand}"/>
         </Grid>
-        <ListView x:Name="PlaylistList" Grid.Row="1" Margin="0 6 0 0" FontSize="18" ItemsSource="{Binding Playlists}" MaxHeight="400">
+        <TextBlock Style="{DynamicResource MediumEmphasisListText}" FontSize="14" Text="No playlists available for this song" Grid.Row="1" MinWidth="420" Margin="0 10 0 10"
+                   Visibility="{Binding Path=Visibility, ElementName=PlaylistList, Converter={StaticResource ReverseVisibilityConverter}}"/>
+        <ListView x:Name="PlaylistList" Grid.Row="1" Margin="0 6 0 0" FontSize="18" ItemsSource="{Binding Playlists}" MaxHeight="400"
+                  Visibility="{Binding Playlists.Count, Converter={StaticResource NotZeroToVisibilityConverter}}">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding SendCommand}"  CommandParameter="{Binding ElementName=PlaylistList, Path=SelectedItem}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
             <ListView.ItemTemplate>
                 <DataTemplate DataType="{x:Type m:Playlist}">
                     <Grid Name="ItemContainer">
-                        <Grid.InputBindings>
-                            <MouseBinding Gesture="LeftClick" 
-                                          Command="{Binding DataContext.SendCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:AddToPlaylistView}}}"
-                                          CommandParameter="{Binding .}">
-                            </MouseBinding>
-                        </Grid.InputBindings>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="50"/>
                             <ColumnDefinition Width="300"/>
