--- a/src/Osu.Music.UI/Views/PlaylistDetailsView.xaml
+++ b/src/Osu.Music.UI/Views/PlaylistDetailsView.xaml
@@ -35,7 +35,7 @@
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Model.Playlist.Name}" FontSize="24"/>
                         <Button Style="{DynamicResource MaterialDesignFlatButton}" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}" Width="30" Height="30" 
-                                Padding="0" Margin="5 0 0 0">
+                                Padding="0" Margin="5 0 0 0" Command="{Binding EditNameCommand}">
                             <Button.Content>
                                 <materialDesign:PackIcon Kind="Edit"/>
                             </Button.Content>
@@ -56,15 +56,11 @@
                   HorizontalContentAlignment="Stretch">
             <ListView.ItemTemplate>
                 <DataTemplate DataType="{x:Type m:Beatmap}">
-                    <Grid>
+                    <Grid Name="ItemContainer">
                         <Grid.InputBindings>
-                            <MouseBinding Gesture="LeftDoubleClick" Command="{Binding DataContext.PlayBeatmapAndUpdateCollectionCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}}">
-                                <MouseBinding.CommandParameter>
-                                    <MultiBinding Converter="{StaticResource MultipleParametersConverter}">
-                                        <Binding Path="SelectedItem" RelativeSource="{RelativeSource AncestorType=ListView}"/>
-                                        <Binding Path="DataContext.Model.Beatmaps" RelativeSource="{RelativeSource FindAncestor, AncestorType={x:Type local:MainView}}"/>
-                                    </MultiBinding>
-                                </MouseBinding.CommandParameter>
+                            <MouseBinding Gesture="LeftDoubleClick" 
+                                          Command="{Binding DataContext.PlayBeatmapCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:PlaylistDetailsView}}}"
+                                          CommandParameter="{Binding .}">
                             </MouseBinding>
                         </Grid.InputBindings>
                         <Grid.ColumnDefinitions>
@@ -87,30 +83,39 @@
                             <TextBlock Style="{DynamicResource MediumEmphasisListText}" Text="{Binding Path=Artist}" Margin="0 1 0 0" Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
                         </StackPanel>
 
-                        <TextBlock Style="{DynamicResource HighEmphasisListText}" Grid.Column="2" 
+                        <StackPanel Name="TimePanel" Grid.Column="2" VerticalAlignment="Center">
+                            <TextBlock Style="{DynamicResource HighEmphasisListText}" HorizontalAlignment="Right" VerticalAlignment="Center"
                                    Text="{Binding Path=TotalTime, Converter={StaticResource TimeSpanToStringConverter}, FallbackValue=''}" 
-                                   Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"
-                                   HorizontalAlignment="Right" VerticalAlignment="Center"/>
+                                   Foreground="{DynamicResource SolidColorBrushTextMediumEmphasis}"/>
+                        </StackPanel>
+
+                        <StackPanel Name="ActionPanel" Visibility="Hidden" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                            <Button Style="{DynamicResource SongListOpenInBrowser}"
+                                    Command="{Binding DataContext.OpenBeatmapInBrowserCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:PlaylistDetailsView}}}" 
+                                    CommandParameter="{Binding .}">
+                                <Button.ToolTip>
+                                    <TextBlock Style="{DynamicResource TooltipText}" Text="Show on osu! website"/>
+                                </Button.ToolTip>
+                            </Button>
+                            <Button Style="{DynamicResource SongListRemoveFromPlaylist}" Margin="5 0 0 0"
+                                    Command="{Binding DataContext.RemoveFromPlaylistCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:PlaylistDetailsView}}}" 
+                                    CommandParameter="{Binding .}">
+                                <Button.ToolTip>
+                                    <TextBlock Style="{DynamicResource TooltipText}" Text="Remove from this playlist"/>
+                                </Button.ToolTip>
+                            </Button>
+                        </StackPanel>
                     </Grid>
+                    <DataTemplate.Triggers>
+                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsMouseOver}" Value="True">
+                            <DataTrigger.Setters>
+                                <Setter TargetName="TimePanel" Property="Visibility" Value="Hidden"/>
+                                <Setter TargetName="ActionPanel" Property="Visibility" Value="Visible"/>
+                            </DataTrigger.Setters>
+                        </DataTrigger>
+                    </DataTemplate.Triggers>
                 </DataTemplate>
             </ListView.ItemTemplate>
-            <ListView.ContextMenu>
-                <ContextMenu DataContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}" Background="White" x:Name="SourceMenu">
-                    <MenuItem Header="Open in Explorer" Background="White"
-                              Command="{Binding DataContext.OpenBeatmapInExplorerCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}" 
-                              CommandParameter="{Binding Path=PlacementTarget.SelectedItem, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}"/>
-                    <MenuItem Header="Add to Playlist" Background="White"
-                              ItemsSource="{Binding DataContext.Model.Playlists, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}">
-                        <MenuItem.ItemContainerStyle>
-                            <Style BasedOn="{StaticResource MaterialDesignMenuItem}" TargetType="{x:Type MenuItem}">
-                                <Setter Property="MenuItem.Header" Value="{Binding Name}"/>
-                                <Setter Property="Command" Value="{Binding DataContext.SendBeatmapToPlaylistCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ContextMenu}}}"/>
-                                <Setter Property="CommandParameter" Value="{Binding}"/>
-                            </Style>
-                        </MenuItem.ItemContainerStyle>
-                    </MenuItem>
-                </ContextMenu>
-            </ListView.ContextMenu>
         </ListView>
     </Grid>
 </UserControl>
