--- a/src/Osu.Music.UI/Views/Dialogs/ManagePlaylistNameView.xaml
+++ b/src/Osu.Music.UI/Views/Dialogs/ManagePlaylistNameView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Osu.Music.UI.Views.Dialogs.NewPlaylistView"
+﻿<UserControl x:Class="Osu.Music.UI.Views.Dialogs.ManagePlaylistNameView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,7 +11,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="350">
     <UserControl.Resources>
-        <proxy:NewPlaylistViewModelProxy x:Key="proxy" Data="{Binding}"/>
+        <proxy:ManagePlaylistNameViewModelProxy x:Key="proxy" Data="{Binding}"/>
     </UserControl.Resources>
     <Grid Margin="16">
         <Grid.RowDefinitions>
@@ -19,7 +19,7 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" Text="New playlist:"/>
+        <TextBlock Style="{DynamicResource HighEmphasisListText}" FontSize="16" Text="{Binding Title}"/>
         <TextBox Grid.Row="1" Margin="0 6 0 0" wpf:HintAssist.Hint="Name" FontSize="18" MinWidth="300"
                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                  utility:ValidationBehaviour.HasError="{Binding NameHasError}">
@@ -37,7 +37,7 @@
             </TextBox.Text>
         </TextBox>
         <StackPanel Grid.Row="2" Margin="0 20 0 0" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Command="{Binding AcceptCommand}" IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}" Content="CREATE" VerticalContentAlignment="Center"/>
+            <Button Command="{Binding AcceptCommand}" IsDefault="True" Style="{StaticResource MaterialDesignFlatButton}" Content="{Binding Caption}" VerticalContentAlignment="Center"/>
             <Button Command="{Binding CancelCommand}" IsCancel="True" Style="{StaticResource MaterialDesignFlatButton}" Content="CANCEL" Margin="8 0 0 0"/>
         </StackPanel>
     </Grid>
